# thesetimes

./: .env  .gitignore  LICENSE.md  Makefile  README.md  bbc.json  docker-compose.yml  dw.json  ft.json  nb.ipynb  notes.md  notes.txt  nyt.json  scraper.py  test_addon.py  wsj.json
api/: .env  Dockerfile  main.py  manage.py  pyproject.toml  requirements.txt
api/core/: app.py  models.py  router.py  routes.py  utils.py
api/static/css/: style.css
api/templates/: _home-snippet.html  article.html  base.html  home.html  pubs.html
api/thesetimes/: asgi.py  settings.py  urls.py  wsgi.py
api/thesetimes/api/: models.py  views.py
app/: .flaskenv  notes.txt  requirements.txt
app/core/: __init__.py
app/core/templates/: _home-snippet.html
app/core/utils/: scraper.py
app/core/utils/pubs/: bbc.py  bloomberg.py  dw.py  ft.py  nyt.py  wsj.py
core/: routes.py
core/templates/: article.html  base.html  home.html
core/utils/: bbc.py  bloomberg.py  driver.py  dw.py  ft.py  nyt.py  scraper.py  wsj.py
flask/: nb.ipynb  test.json
flask/core/: routes.py
flask/core/templates/: home.html
flask/core/utils/: driver.py
flask/core/utils/pubs/: bbc.py  nyt.py
orm/: alembic.ini  main.py  pyproject.toml  requirements.txt
orm/core/: database.py  models.py
orm/core/alembic/: env.py
orm/core/alembic/versions/: 0e1b26aa5c29_autogenerated.py  9e39c7a730f8_autogenerated.py  e61579b72a04_autogenerated.py
orm/lib/: database.py  models.py
orm/lib/alembic/: env.py
orm/lib/alembic/versions/: 17fb61fdf03c_autogenerated.py  2a2274ffa53a_autogenerated.py  39d234342aa2_autogenerated.py  4290aee0be60_autogenerated.py  4f51814514cd_autogenerated.py  5202edc2bec7_autogenerated.py  75c67e9dacdf_autogenerated.py  76cddb9c5e40_autogenerated.py  d111fb260344_autogenerated.py  e93ead9de071_autogenerated.py  ef6d01d9bc53_autogenerated.py  fb24e38216ad_autogenerated.py
package-orm/: Makefile  README.md  pyproject.toml
package-orm/thesetimes_orm/: database.py  models.py
scraper/: Dockerfile  driver.py  main.py  notes.txt  pyproject.toml  requirements.txt  test.json  update.py
scraper/core/: __init__.py  article_scraper.py  database.py  database_models.py  director.py
scraper/core/publication/: financial_times.py
scraper/core/publications/: __init__.py  financial_times.py
scraper/lib/: __init__.py  article.py  article_scraper.py  database_models.py  director.py  logger.py  webdriver.py
scraper/lib/publications/: __init__.py  financial_times.py
scraper/pubs/: ars.py  bbc.py  bloomberg.py  dw.py  econ.py  ft.py  nb.ipynb  nyr.py  nyt.py  sky.py  wsj.py
scraper/pubs/news/: bbc.py  bloomberg.py  dw.py  ft.py  nyt.py  wsj.py
scraper/pubs/oped/: econ.py  nyr.py
scraper/pubs/sports/: f365.py  sky.py
scraper/pubs/tech/: ars.py  mit.py
scraper/tests/cases/publications/: cases_financial_times.py
scraper/tests/cases/publications/financial_times/: homepage.html
scraper/tests/unit/publications/: test_financial_times.py
scraper/utils/: driver.py  mongo.py  update.py
service-orm/: Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml
service-orm/alembic/: env.py
service-orm/alembic/versions/: 2b5c20c10315_autogenerated.py  4d0aef245b3d_autogenerated.py  61593d6e9147_autogenerated.py  7e8d9ec4a7f3_autogenerated.py  c29b6ad4dd15_autogenerated.py  e8c72d3c2ae0_autogenerated.py
service-scraper/: Dockerfile  README.md  main.py  notes.md  pyproject.toml
service-scraper/core/: article_scraper.py  database.py  director.py  logger.py  webdriver.py
service-scraper/core/publication/: __init__.py  economist.py  financial_times.py  new_yorker.py  ny_times.py
service-scraper/tests/cases/publications/: cases_financial_times.py
service-scraper/tests/cases/publications/economist/: article.html  article.py  homepage.html  homepage.py
service-scraper/tests/cases/publications/financial_times/: article.html  article.py  article_charts.html  article_images.html  homepage.html  homepage.py
service-scraper/tests/cases/publications/new_yorker/: article.html  article.py  homepage.html  homepage.py
service-scraper/tests/cases/publications/ny_times/: article.html  article.py  homepage.html  homepage.py
service-scraper/tests/fixtures/: engine.py
service-scraper/tests/unit/publications/: test_economist.py  test_financial_times.py  test_new_yorker.py  test_ny_times.py
service-web/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
service-web/core/: app.py  blueprint.py  engine.py  filters.py
service-web/core/static/css/: style.css
service-web/core/templates/: article.html  base.html
swag/: .donoteditthisfile.conf
swag/dns-conf/: cloudflare.ini
swag/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory/d1e1573fa7c686346c39c40d669fa9f5/: meta.json  private_key.json  regr.json
swag/etc/letsencrypt/archive/elgrove.xyz/: cert1.pem  fullchain1.pem
swag/etc/letsencrypt/csr/: 0000_csr-certbot.pem  0001_csr-certbot.pem
swag/etc/letsencrypt/keys/: 0000_key-certbot.pem  0001_key-certbot.pem
swag/etc/letsencrypt/live/elgrove.xyz/: cert.pem  chain.pem  fullchain.pem  priv-fullchain-bundle.pem  privkey.pem  privkey.pfx
swag/etc/letsencrypt/renewal/: elgrove.xyz.conf
swag/fail2ban/: fail2ban.sqlite3
swag/keys/: cert.crt  cert.key  letsencrypt
swag/log/: logrotate.status
swag/nginx/site-confs/: default
utils/: ft.py  scraper.py
web/: Dockerfile  main.py  pyproject.toml  requirements.txt
web/core/: __init__.py  blueprint.py  engine.py  models.py
web/core/static/css/: style.css
web/core/templates/: article.html  base.html  home.html
