[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Aaron <aaron@aaron.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
beautifulsoup4 = "^4.11.2"
selenium = "^4.8.2"
lxml = "^4.9.2"
sqlalchemy = "^1.4"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
