[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Aaron <aaron@aaron.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
beautifulsoup4 = "^4.11.2"
selenium = "^4.8.2"
lxml = "^4.9.2"
sqlalchemy = "^1.4"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
pytest = "^7.2.2"
black = "^23.3.0"

[tool.pylint.options]
ignore = [".venv", "pyproject.toml"]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "invalid-name",
    "fixme",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
