[tool.poetry]
name = "thesetimes-service-orm"
version = "0.1.0"
description = ""
authors = ["Aaron <aaron@aaron.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
sqlalchemy = "^1.4"
psycopg2-binary = "^2.9.5"
alembic = "^1.10.2"
sqlalchemy-utils = "^0.40.0"
thesetimes-orm = { path = "../package-orm", develop = false}

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
pytest = "^7.2.2"
black = "^23.3.0"

[tool.pylint.options]
ignore = [".venv", "pyproject.toml"]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "invalid-name",
    "fixme",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

