[tool.poetry]
name = "thesetimes-service-orm"
version = "0.1.0"
description = ""
authors = ["Aaron <aaron@aaron.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
sqlalchemy = "^1.4"
psycopg2-binary = "^2.9.5"
alembic = "^1.10.2"
sqlalchemy-utils = "^0.40.0"
thesetimes-orm = { path = "../package-orm", develop = false}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

