[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Aaron <aaron@aaron.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
flask = "^2.2.3"
gunicorn = "^20.1.0"



[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
